--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mvc?allowPublicKeyRetrieval=tr
 spring.datasource.username=root
 spring.datasource.password=jS*Po}{@2
 
+
 spring.jpa.show-sql = true
-
-
+spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.ddl-auto = update
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-
